# localizar

./: .gitignore  CMakeLists.txt  README.md  dstring.c  dstring.h  flags.c  flags.h  helpers.c  helpers.h  localiza.c  localiza.h  targets.c  targets.h
include/: dstring.h  file.h  flags.h  helpers.h  localiza.h  searchTerm.h  structs.h  targets.h
src/: file.c  flags.c  flags.h  localiza.c  localiza.h  main.c  searchTerm.c  searchTerm.h  targets.c  targets.h
src/helpers/: dstring.c  dstring.h  helpers.c  structs.h
